🎨 test: add html style and fix z-index

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Kapakana:wght@300..400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Kapakana:wght@300..400&display=swap");
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --font-italiano : "Kapakana", cursive;
+  --font-italiano: "Kapakana", cursive;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -51,7 +51,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(37.44% 0.085 36.00);
+  --primary: oklch(37.44% 0.085 36);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -88,7 +88,8 @@
     @apply bg-background text-sm font-light text-primary;
     font-family: "Julius Sans One", sans-serif;
   }
-  html {
-    color-scheme: light;
-  }
+}
+html {
+  color-scheme: light !important;
+  supported-color-schemes: light;
 }
